--- a/style.css
+++ b/style.css
@@ -4,8 +4,33 @@
     padding: 0;
 }
 
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+button {
+    background-color: #000;
+    color: #fff;
+    font-weight: bold;
+    font-size: large;
+    padding: 10px 20px;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
-    height: 100vh;
+    height: 600px;
+    width: 600px;
+}
+
+.item {
+    aspect-ratio: 1 / 1;
+    border: 1px solid;
 }
