--- a/style.css
+++ b/style.css
@@ -15,6 +15,16 @@ body {
     justify-content: space-around;
 }
 
+img {
+    width: 64px;
+    background-color: #fff;
+}
+
+.buttons {
+    display: flex;
+    gap: 40px;
+}
+
 button {
     background-color: #000;
     color: #fff;
